# mpl

./: README.md  mpl.cabal
app/: Main.hs
examples/: fact.mpl  hello.mpl
mpl-core/: mpl-core.cabal
mpl-core/src/: BioPrims.hs  Eval.hs  MPL.hs  Parser.hs  Syntax.hs
mplc/: mplc.cabal
mplc/src/: Main.hs
mpli/: mpli.cabal
mpli/src/: Main.hs
src/: Eval.hs  Syntax.hs
